src/test/ui/codemap_tests/two_files.stderr
error[E0404]: expected trait, found type alias `Bar`
  --> $DIR/two_files.rs:5:6
   |
LL | impl Bar for Baz { }
   |      ^^^ type aliases cannot be used as traits
   |
   = note: did you mean to use a trait alias?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
